--- a/index.html
+++ b/index.html
@@ -1,43 +1,18 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf8">
-    <title>React问答 app - by 1ke.co & zexeo.com</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <style>
-      .container{
-        max-width: 800px;
-      }
-      .jumbotron .container{
-        position: relative;
-        max-width: 800px;
-      }
-      #add-question-btn{
-        position: absolute;
-        bottom: -20px;
-        right: 20px;
-      }
-      form[name="addQuestion"] .btn{
-        margin: 20px 0 0 15px;
-      }
-      .media-left{
-        text-align: center;
-        width:70px;
-        float: left;
-      }
-      .media-left .btn{
-        margin-bottom: 10px;
-      }
-      .vote-count{
-        display: block;
-      }
-    </style>
-</head>
-<body>
-    <div id="app">
-       
-    </div>
 
-    
-    <script src="/dist/js/main.js"></script> 
+<head>
+  <meta charset="utf-8">
+  <title>sell</title>
+  <meta name="viewport" content="width=device-width,inital-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <link rel="stylesheet" type="text/css" href="static/css/reset.css" />
+</head>
+
+<body>
+  <div id="app">
+    <!-- built files will be auto injected -->
+    <router-view></router-view>
+  </div>
 </body>
+
 </html>
